src/objects/Audit__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date &amp; time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <formula>Prospect_Customer__r.EBS_ID__c</formula>
        <label>EBS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Updated__c</fullName>
        <label>Field Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_extended_opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPP extended opportunity</label>
        <referenceTo>HPP_extended_opportunity__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_From_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Value__c</fullName>
        <label>Prior Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedTo__c</fullName>
        <formula>Prospect_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sfWhatId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <formula>Prospect_Customer__r.SFDC_ID__c</formula>
        <label>SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updated_Date_Time__c</fullName>
        <label>Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <formula>CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sfOwnerId</label>
        <type>Text</type>
    </fields>
    <label>Audit</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>